--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
+    "rc-checkbox": "^2.1.8",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-calendar": "^2.19.2",
