--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-calendar": "^2.19.2",
     "react-dom": "^16.10.2",
     "react-loading-overlay": "^1.0.1",
+    "react-moment": "^0.9.7",
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
