--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-calendar": "^2.19.2",
     "react-dom": "^16.10.2",
+    "react-image-file-resizer": "^0.2.3",
     "react-loading-overlay": "^1.0.1",
     "react-moment": "^0.9.7",
     "react-paginate": "^6.3.2",
