--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.5.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "d3": "^5.15.0",
