--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.9.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "leaflet": "^1.6.0",
     "moment": "^2.24.0",
     "rc-checkbox": "^2.1.8",
     "react": "^16.10.2",
@@ -21,6 +22,7 @@
     "react-calendar": "^2.19.2",
     "react-dom": "^16.10.2",
     "react-image-file-resizer": "^0.2.3",
+    "react-leaflet": "^2.7.0",
     "react-loading-overlay": "^1.0.1",
     "react-moment": "^0.9.7",
     "react-paginate": "^6.3.2",
