--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-calendar": "^2.19.2",
     "react-dom": "^16.10.2",
+    "react-faq-component": "^1.0.6",
     "react-image-file-resizer": "^0.2.3",
     "react-leaflet": "^2.7.0",
     "react-loading-overlay": "^1.0.1",
