--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "d3": "^5.15.0",
     "date-fns": "^2.9.0",
+    "emailjs-com": "^2.4.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.6.0",
