--- a/package.json
+++ b/package.json
@@ -30,17 +30,19 @@
     "react-moment": "^0.9.7",
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.1",
     "react-stripe-elements": "^6.1.0",
     "react-truncate": "^2.4.0",
     "redux": "^4.0.4",
     "redux-devtools": "^3.5.0",
-    "stripe": "^8.19.0"
+    "stripe": "^8.19.0",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "start": "react-scripts start",
     "start:prod": "react-scripts start",
     "build": "react-scripts build",
+    "build:prod": "webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -58,5 +60,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.3.0"
   }
 }
