Add cookie law message

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-calendar": "^2.19.2",
+    "react-cookie-consent": "^5.1.2",
     "react-dom": "^16.10.2",
     "react-faq-component": "^1.0.6",
     "react-image-file-resizer": "^0.2.3",
