--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-truncate": "^2.4.0",
     "redux": "^4.0.4",
     "redux-devtools": "^3.5.0",
+    "serve": "^11.3.2",
     "stripe": "^8.19.0",
     "webpack-cli": "^3.3.12"
   },
