--- a/DockerfileProd
+++ b/DockerfileProd
@@ -5,6 +5,7 @@ WORKDIR /app
 COPY package.json /app
 #Installing all dependencies.
 RUN npm install
+RUN npm i serve -g
 # RUN npm run build can't build on AWS -> run out of memory
 # Running the dev server.
 CMD ["serve", "-s", "build"]
